Footer Completed Hero Section Completed Had to add a function to hide the mobile nav on window resize up

--- a/src/components/BurgerMenu/BurgerMenu.module.css
+++ b/src/components/BurgerMenu/BurgerMenu.module.css
@@ -52,7 +52,8 @@
 
 @media only screen and (min-width: 950px) {
 	.burger_img,
-	.logo {
+	.logo,
+	.mobile_menu_container {
 		display: none;
 	}
 }
