--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,14 @@
 }
 
 #inputs,
-#cards {
+.card_container {
 	background: var(--bg-gray);
+}
+
+.card_container {
+	display: flex;
+	justify-content: space-between;
+	padding: 100px;
 }
 
 .container {
@@ -40,5 +46,9 @@ p {
 	}
 	h1 {
 		font-size: 40px;
+	}
+	.card_container {
+		flex-direction: column;
+		align-items: center;
 	}
 }
