--- a/src/components/LinkInput/LinkInput.module.css
+++ b/src/components/LinkInput/LinkInput.module.css
@@ -1,72 +1,72 @@
 #linkInput_container {
-	width: 100%;
-	background: #3a3053;
-	background-image: url('/assets/bg-shorten-desktop.svg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	padding: 50px 65px;
-	border-radius: 10px;
-	display: flex;
-	justify-content: space-between;
-	position: relative;
+  width: 100%;
+  background: #3a3053;
+  background-image: url("/assets/bg-shorten-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 50px 65px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
 }
 
 #linkInput_container input {
-	padding: 15px 15px;
-	border-radius: 5px;
-	border: 2px solid tomato;
-	width: 80%;
-	margin-right: 30px;
+  padding: 15px 15px;
+  border-radius: 5px;
+  border: 2px solid tomato;
+  width: 80%;
+  margin-right: 30px;
 }
 
 #linkInput_container button {
-	padding: 14px 40px;
-	border-radius: 5px;
-	border: none;
-	color: white;
-	background: var(--primary);
-	cursor: pointer;
-	font-size: 18px;
-	font-weight: bold;
-	transform: translateY(1px);
-	min-width: 170px;
+  padding: 14px 40px;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  background: var(--primary);
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  transform: translateY(1px);
+  min-width: 170px;
 }
 
 #linkInput_container button:hover {
-	background: #2de7db;
+  background: #2de7db;
 }
 
 ::placeholder {
-	color: tomato;
-	opacity: 0.6;
+  color: tomato;
+  opacity: 0.6;
 }
 
 #linkInput_container span {
-	position: absolute;
-	bottom: 20px;
-	color: tomato;
-	font-size: 10pt;
-	font-style: italic;
-	font-weight: 500;
-	opacity: 0.7;
+  position: absolute;
+  bottom: 20px;
+  color: tomato;
+  font-size: 10pt;
+  font-style: italic;
+  font-weight: 500;
+  opacity: 0.7;
 }
 
 @media only screen and (max-width: 950px) {
-	#linkInput_container {
-		flex-direction: column;
-		align-items: center;
-		padding: 25px;
-	}
-	#linkInput_container input {
-		width: 100%;
-		margin-right: 0px;
-		margin-bottom: 40px;
-	}
-	#linkInput_container button {
-		width: 100%;
-	}
-	#linkInput_container span {
-		bottom: 90px;
-		left: 25px;
-	}
+  #linkInput_container {
+    flex-direction: column;
+    align-items: center;
+    padding: 25px;
+  }
+  #linkInput_container input {
+    width: 100%;
+    margin-right: 0px;
+    margin-bottom: 40px;
+  }
+  #linkInput_container button {
+    width: 100%;
+  }
+  #linkInput_container span {
+    bottom: 90px;
+    left: 25px;
+  }
 }
