Add styling bits and pieces

--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,25 @@
 }
 
 #inputs,
+#cards_heading,
 .card_container {
 	background: var(--bg-gray);
 }
 
+#cards_heading {
+	text-align: center;
+}
+
+#cards_heading p {
+	max-width: 450px;
+	margin: auto;
+	line-height: 2;
+}
+
+#cards_heading h2 {
+	font-size: 40px;
+	margin-bottom: 20px;
+}
 .card_container {
 	display: flex;
 	justify-content: space-between;
