--- a/src/components/LinkInput/LinkInput.module.css
+++ b/src/components/LinkInput/LinkInput.module.css
@@ -51,6 +51,34 @@
 	opacity: 0.7;
 }
 
+.spinner {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+
+.spinner p {
+	font-size: 20px;
+	color: var(--secondary);
+	margin-top: 0px;
+	padding-top: 0px;
+	margin-top: -20px;
+	font-weight: bold;
+}
+
+.errorMsg {
+	text-align: center;
+	margin-top: 10px;
+	background: tomato;
+	padding: 10px;
+	border-radius: 5px;
+}
+
+.errorMsg span {
+	color: white;
+	font-weight: bold;
+}
 @media only screen and (max-width: 950px) {
 	#linkInput_container {
 		flex-direction: column;
