--- a/src/components/BurgerMenu/BurgerMenu.module.css
+++ b/src/components/BurgerMenu/BurgerMenu.module.css
@@ -1,10 +1,11 @@
 .burger_img {
 	width: 40px;
-	position: absolute;
+	position: fixed;
 	top: 20px;
 	right: 20px;
 	color: #9d9ba6;
 	cursor: pointer;
+	z-index: 5;
 }
 
 .logo {
@@ -25,8 +26,9 @@
 	font-size: 22px;
 	border-radius: 15px;
 	padding: 20px;
-	position: absolute;
+	position: fixed;
 	transition: all ease-in-out 0.4s;
+	z-index: 4;
 }
 
 .navOpen {
